feat(api): add typed env config

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,12 @@
 NODE_ENV=development
 PORT=3000
-DATABASE_URL=postgresql://app:app@db:5432/app
 CORS_ORIGIN=http://localhost:5173
+
+DATABASE_URL=postgresql://app:app@db:5432/app
+SESSION_SECRET=change_me_dev_only
+COOKIE_SECURE=false
+CSRF_ENABLED=true
+JWT_SECRET=change_me_dev_only
+JWT_EXPIRES_IN=2h
+APP_LOCALE=pt-BR
+APP_TIMEZONE=America/Sao_Paulo
