--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,13 +5,26 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "echo 'build api'",
-    "start": "echo 'start api'"
+    "start": "echo 'start api'",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unused-imports": "^3.2.0",
+    "prettier": "^3.3.3",
     "tsx": "^4.16.0"
   },
   "engines": {
