feat(api): add prisma and postgres integration

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,8 +1,8 @@
+# Environment variables for the API
 NODE_ENV=development
 PORT=3000
 CORS_ORIGIN=http://localhost:5173
-
-DATABASE_URL=postgresql://app:app@db:5432/app
+DATABASE_URL=postgresql://app:app@localhost:5432/app
 SESSION_SECRET=change_me_dev_only
 COOKIE_SECURE=false
 CSRF_ENABLED=true
@@ -10,3 +10,4 @@ JWT_SECRET=change_me_dev_only
 JWT_EXPIRES_IN=2h
 APP_LOCALE=pt-BR
 APP_TIMEZONE=America/Sao_Paulo
+
